# haskellrustdemo

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  README.org  Rust.hs  haskellrustdemo.cabal  lib.rs  test.c
