name:                haskellrustdemo
version:             0.1.0.0
synopsis:            Embed Rust in Haskell
homepage:            https://github.com/creichert/haskellrustdemo
license:             MIT
license-file:        LICENSE
author:              Christopher Reichert
maintainer:          creichert07@gmail.com
copyright:           (c) 2014 Christopher Reichert
category:            FFI
build-type:          Simple
extra-source-files:  README.org test.c lib.rs
tested-with:         GHC == 7.8
cabal-version:       >=1.18

executable haskellrustdemo
  main-is:             Rust.hs
  other-extensions:    ForeignFunctionInterface
  build-depends:       base == 4.*
  default-language:    Haskell2010
  -- cc-options:          -fPIC -optl-static -optl-pthread
  extra-lib-dirs:      .
  extra-libraries:     rslib pthread
